# git-squishy

./: AUTHORS  ChangeLog  README.rst  setup.cfg  setup.py
debian/: README.Debian  README.source  changelog  control  copyright  git-squishy.cron.d.ex  git-squishy.default.ex  git-squishy.doc-base.EX  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
git_squishy/: squishy.py
