[metadata]
name = git-squishy
summary = Git command to automatically squash topic branches
description-file = README.rst
license = GPLv3
classifiers =
            Programming Language :: Python :: 3
            Intended Audience :: Developers
keywords = git
author = Romanos Skiadas
author-email = rom.skiad@gmail.com
home-page = https://github.com/rski/git-squishy

[files]
packages =
         git_squishy

[entry_points]
console_scripts =
         git-squishy = git_squishy.squishy:main

[wheel]
universal = 1


[pbr]
warnerrors = True
